# static_server

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cache.rs  main.rs
src/endpoints/: file.rs  health.rs  mod.rs
