[package]
name = "static_server"
description = "Lightweight & superfast static file server supporting in-memory caching"
authors = ["M336"]
version = "1.0.1"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
bytes = "1.11.1"
dashmap = "6.1.0"
dotenv = "0.15.0"
mime_guess = "2.0.5"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6.10", features = ["cors", "compression-full"] }
